Revision history for {{$dist->name}}

{{$NEXT}}

0.95_04   2019-07-31 21:18:30 -0400
  - New interface for bundling code with dist (see bundle method)
    experimental, requires api = 1 (gh#160, gh#162)
  - Bundle API provides a way to define Perl constants from C
    (gh#138)

0.95_03   2019-07-29 19:21:24 -0400
  - Remove build dependent strings from deployment
    (gh#104, gh#110, gh#157, gh#159)

0.95_02   2019-07-25 17:15:09 -0400
  - Fix memory leak related to array in the case of bad type error (gh#154)
  - Fix compiler warnings in record meta module (gh#153, gh155)
  - More consistent use of temp directories to work around noexec on /tmp
    (gh#156, gh#158)

0.95_01   2019-07-23 22:19:14 -0400
  - Add support for "object" types. (gh#49, gh#89, gh#151)
  - Fixed bug where 64 bit integer types could be truncated in a
    cast on 32 bit platform (gh#151)
  - You can now decorate record value types with * to get
    a record type using type parse 1 (gh#150)
  - Add support for complex arrays on platforms where
    complex types are supported (gh#89, gh#152)

0.94      2019-07-23 09:53:46 -0400
  - Production release identical to 0.93_03

0.93_03   2019-07-22 15:02:05 -0400
  - Reclaim some memory waste introduced in 0.93_01 (gh#149)

0.93_02   2019-07-18 10:03:01 -0400
  - Fix complex test on 32bit

0.93_01   2019-07-17 20:21:47 -0400
  - Add support for returning records pass-by-value (gh#89, gh#147)
  - Add enum and senum (signed enum) types (gh#146)

0.92      2019-07-17 18:16:40 -0400
  - Production release identical to 0.91_02

0.91_02   2019-07-16 19:31:40 -0400
  - Documentation improvements. (gh#139, gh#145, et. al)
  - Fixed minor testing error introduced in 0.91_01 (gh#143, gh#144)

0.91_01   2019-07-14 09:32:13 -0400
  - Add support for variadic functions (gh#136, gh#141)
  - Include Type Parser version 1.  This can be activated using
    the api => 1 when creating a FFI::Platypus instance (gh#135)